syntax = "proto3";

import "google/api/annotations.proto";

package exampleMessage;



service Greeter{
    rpc SayHello(HelloRequest) returns(HelloReply) {
        option (google.api.http) = {
        post: "/echo"
        body: "*"
      };
    }
}

message HelloRequest {
    string name = 1;
    int32 a=2;
    int32 b=3;
}

message HelloReply {
    string message = 1;
    int32 result=2;
}

